testfx/errors/error_tests/err_11_double_operator.fx
// 测试11: 运算符错误 - 意外的运算符
x := 10 / / 20
